2012-03-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* dgnushack.el: Bind `gnus-registry-enabled' for XEmacs.

	* gnus.el: Register gnus-registry functions.

	* gnus-registry.el (gnus-try-warping-via-registry): Moved here and
	indent.

	* gnus-int.el (gnus-warp-to-article): Check whether the registry is
	enabled before warping.

2012-03-22  Dave Abrahams  <dave@boostpro.com>

	* gnus-sum.el (gnus-summary-insert-subject): Record information in the
	registry about each article retrieved.

	* gnus-int.el (gnus-select-group-with-message-id): New function.
	(gnus-try-warping-via-registry): Ditto.
	(gnus-warp-to-article): Fall back on the registry.

2012-03-22  Sergio Martínez  <samf0xb58@gmail.com>  (tiny change)

	* nnimap.el (nnimap-request-scan): Allow `nnimap-inbox' to be a list of
	inboxes.

2012-03-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-fetch-partial-articles): Minor doc string fixup.

2012-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-summary-resend-message-insert-gcc): Assume that
	gnus-gcc-self-resent-messages may be a group parameter.
	(gnus-summary-resend-message): Don't encode encoded words in header
	when Gcc'ing resent message.

2012-03-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-insert): Treat non-breaking space just like normal
	space.  This seems to produce more pleasing results.
	(shr-insert): Only insert a blank line if we're starting from an image.
	(shr-tag-br): Allow <br> to end lines or to make a single blank line.
	(shr-ensure-paragraph): Consider lines with white space to be blank.

2012-03-15  Elias Pipping  <pipping@lavabit.com>

	* Makefile.in: Respect DESTDIR.

2012-03-14  Christopher Schmidt  <christopher@ch.ristopher.com>

	* gnus-msg.el (gnus-inews-do-gcc): Add gnus-gcc-pre-body-encode-hook
	and gnus-gcc-post-body-encode-hook.

2012-03-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-expire-articles-1): Don't try to expire